bin/testsuite/tests/compiler/src/errors/compiler2826.swg
#global testerror "Err0023"

struct Toto {}

impl Toto
{
    //#[Swag.Implicit]
    func opCast(me)->s32
    {
        return 666
    }
}

#test
{
    var x: Toto
    var y: s32 = x
    @assert(y == 666)
}
